# RegistryTools

./: .gitignore  PYPI_DESCRIPTION.md  README.md  fastmcp.http.json  fastmcp.json  pyproject.toml
.github/workflows/: publish.yml
RegistryTools/: __init__.py  __main__.py  defaults.py  server.py
RegistryTools/registry/: __init__.py  models.py  registry.py
RegistryTools/search/: __init__.py  base.py  bm25_search.py  regex_search.py
RegistryTools/storage/: __init__.py  base.py  json_storage.py  sqlite_storage.py
docs/: API.md  ARCHITECTURE.md  AUDIT_REPORT_PHASE16.md  AUDIT_REPORT_V0.1.0.md  BEST_PRACTICES.md  CHANGELOG.md  CLAUDE_CONFIG.md  CONFIGURATION.md  CONTRIBUTING.md  DEVELOPMENT_WORKFLOW.md  IDE_CONFIG.md  INSTALLATION.md  PUBLISHING.md  README.md  REFACTORING_ANALYSIS.md  SCRIPTS_GUIDE.md  STORAGE.md  TASK.md  TROUBLESHOOTING.md  USER_GUIDE.md
examples/: README.md  basic_usage.py  custom_tools.py  search_demo.py  sqlite_usage.py  storage_migration.py
scripts/: README.md
scripts/release/: create-release.py
scripts/verify/: verify-after-install.py  verify-before-release.py  verify-docs-optimization.sh
src/registrytools/: __init__.py  __main__.py  defaults.py  server.py
src/registrytools/auth/: __init__.py  generator.py  middleware.py  models.py  storage.py
src/registrytools/registry/: __init__.py  models.py  registry.py
src/registrytools/search/: __init__.py  base.py  bm25_search.py  embedding_search.py  regex_search.py
src/registrytools/storage/: __init__.py  base.py  json_storage.py  sqlite_storage.py
tests/: __init__.py  test_auth.py  test_auth_integration.py  test_cache.py  test_concurrent_access.py  test_embedding_search.py  test_error_scenarios.py  test_hot_cold_separation.py  test_integration.py  test_main.py  test_mcp_integration.py  test_mcp_tools.py  test_models.py  test_performance.py  test_registry.py  test_search.py  test_search_method_config.py  test_server_description.py  test_storage.py
